--- a/src/index.css
+++ b/src/index.css
@@ -5,15 +5,107 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  margin:0;
+  padding:0;
+  background-image: url("/src/assets/back.jpg");
+
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+  height: 50vh;
+  width: 100%;
+  overflow: hidden;
+ 
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-body{
+
+.header{
+  width:100%;
+  background-color:white;
+  height:10vh;
+  display: flex;
+  justify-content:space-between;
+  align-items: center;
   margin:0;
   padding:0;
+  color:blue;
 
+
+}
+h1{
+  margin-left:100px;
+  font-size: 25px;
+  
+}
+.score
+{
+  display:flex;
+  flex-flow: column;
+  justify-content: flex-end;
+  align-items: center;
+  margin-right:100px;
+  font-weight: 800;
+  font-size: 20px;
+  color:blue;
+
+
+}
+.name{
+  text-align: center;
+  color: blue;
+  margin-top: 40px;
+  font-weight: 800;
+  font-size:20px;
+  align-self: center;
+ 
+}
+
+
+p{
+  
+ 
+  align-self: flex-end;
+  z-index: 100;
+  text-align: center;
+  font-size:50px;
+  font-weight: 800;
+  color:blue;
+}
+.center{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.table{
+  
+  margin: 30px;
+  display: grid;
+  grid-template:1fr 1fr 1fr 1fr/1fr 1fr 1fr 1fr;
+  gap:50px;
+
+}
+
+.p{
+  width:350px;
+  height:350px;
+  background-color: aliceblue;
+  text-align: center;
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
+  align-items: center;
+  border-radius: 30px;
+  
+
+}
+img{
+  width:200px;
+  height:200px;
+  background-color: aqua;
+  border-radius:70%;
+  
 }
