--- a/src/index.css
+++ b/src/index.css
@@ -1,111 +1,117 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Protest+Strike&display=swap');
+
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  margin:0;
-  padding:0;
+  margin: 0;
+  padding: 0;
   background-image: url("/src/assets/back.jpg");
-
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
   height: 50vh;
   width: 100%;
   overflow: hidden;
- 
-
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-.header{
-  width:100%;
-  background-color:white;
-  height:10vh;
+.header {
+  width: 100%;
+  background-color:black;
+  opacity:0.7; /* Light grey for a modern look */
+  height: 10vh;
   display: flex;
-  justify-content:space-between;
+  justify-content: space-between;
   align-items: center;
-  margin:0;
-  padding:0;
-  color:blue;
-
-
+  margin: 0;
+  padding: 0;
+  color: #3333ff; /* Brighter blue for better contrast */
 }
-h1{
-  margin-left:100px;
-  font-size: 25px;
-  
+
+h1 {
+  font-family: "Protest Strike", sans-serif;
+  font-weight: 800;
+  font-style: normal;
+  opacity:1;
+  color:#FF6500;
+  margin-left: 100px;
+  font-size: 34px;
+   /* Dark blue to complement the background */
 }
-.score
-{
-  display:flex;
+
+.score {
+  display: flex;
   flex-flow: column;
   justify-content: flex-end;
   align-items: center;
-  margin-right:100px;
+  margin-right: 100px;
   font-weight: 800;
   font-size: 20px;
-  color:blue;
-
-
+  opacity:1;
+  color:#FF6500; /* Vibrant orange for emphasis */
 }
-.name{
+
+.name {
   text-align: center;
-  color: blue;
+  color: darkorange; /* Matching dark blue */
   margin-top: 40px;
   font-weight: 800;
-  font-size:20px;
-  align-self: center;
- 
+  font-size: 25px;
 }
 
-
-p{
-  
- 
-  align-self: flex-end;
-  z-index: 100;
-  text-align: center;
-  font-size:50px;
-  font-weight: 800;
-  color:blue;
-}
-.center{
+.center {
   display: flex;
   justify-content: center;
   align-items: center;
 }
-.table{
-  
+
+.table {
   margin: 30px;
   display: grid;
-  grid-template:1fr 1fr 1fr 1fr/1fr 1fr 1fr 1fr;
-  gap:50px;
-
+  grid-template: 1fr 1fr 1fr 1fr / 1fr 1fr 1fr 1fr;
+  gap: 50px;
 }
 
-.p{
-  width:350px;
-  height:350px;
-  background-color: aliceblue;
+.p {
+  
+  width: 350px;
+  height: 350px;
+  
+  background: rgba(0, 0, 0, 0.8); /* Light gradient */
   text-align: center;
   display: flex;
   flex-flow: column;
   justify-content: center;
   align-items: center;
   border-radius: 30px;
-  
 
+  transition: transform 0.3s ease, box-shadow 0.3s ease; /* For animation */
 }
-img{
-  width:200px;
-  height:200px;
-  background-color: aqua;
-  border-radius:70%;
-  
+
+.p:hover {
+  transform: scale(1.05); /* Slightly increase size on hover */
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2); /* Subtle shadow */
+}
+
+.p:active {
+  transform: scale(0.95); /* Shrink a bit when clicked */
+}
+
+img {
+  opacity:1;
+  width: 200px;
+  height: 200px;
+  background: rgb(0, 0, 0);
+  border-radius: 70%;
+  border-width: 5px;
+  border-color: #FF6500;
+  border-style: solid;
+  transition: all 0.2s ease-in-out;
 }
